--- a/_config.yml
+++ b/_config.yml
@@ -98,5 +98,5 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: 'git'
-  repo: https://github.com/qq626928256/qq626928256.github.io.git
-  branch: release
+  repo: https://github.com/qq626928256/ZhuYe-Hexo-Blog-Release.git
+  branch: main
