--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 烛夜
-subtitle: '自闭资源分享'
-description: '自闭资源分享'
+
+description: '完全免费自闭症资源分享'
 keywords: '自闭症'
 author: Demon
 language: zh-CN
