--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1241,8 +1241,8 @@ CDN:
   # 两者的选项：local/jsdelivr/unpkg/cdnjs/custom
   # 注意： Dev 版本只能使用 'local' 作为内部脚本
   # 注意：将第三方脚本设置为 'local' 时，需要安装 hexo-butterfly-extjs
-  internal_provider: local
-  third_party_provider: jsdelivr
+  internal_provider: unpkg
+  third_party_provider: cdnjs
 
   # 是否在 URL 中添加版本号，true 或 false
   version: false
