尝试添加广告

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -843,13 +843,13 @@ microsoft_clarity:
 # Google Adsense 广告配置
 google_adsense:
   # 是否启用
-  enable: false
+  enable: true
   # 是否自动投放广告
   auto_ads: true
   # 广告脚本 URL
   js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
   # 客户 ID
-  client:
+  client: ca-pub-8094153859651071
   # 是否启用页面级广告
   enable_page_level_ads: true
 
